--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
   "files.associations": {
     "log2023-03-02 10-19-19": "log",
     "vector": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "new": "cpp"
   },
   "editor.suggest.snippetsPreventQuickSuggestions": false,
   "aiXcoder.showTrayIcon": true,
